--- a/site/Public/perfil.html
+++ b/site/Public/perfil.html
@@ -51,6 +51,8 @@
             Mini-Game
           </button>
           <button class="btn btn-perfil" onclick="forum()">Forum</button>
+          <button class="btn btn-perfil" onclick="tabela()">Tabela Geral</button>
+
         </div>
         <button class="btn" onclick="limparSessao()">Sair</button>
       </div>
