--- a/site/Public/index.html
+++ b/site/Public/index.html
@@ -116,8 +116,8 @@
                 <p onclick="limparSessao()">sair</p> 
                 <h2 onclick="btnFecharUser()">X</h2>
             </div>
+        </div>
     </div>
-
 </body>
 </body>
 </html>
