--- a/site/Public/gamejs.html
+++ b/site/Public/gamejs.html
@@ -14,7 +14,7 @@
   <body class="body_game">
     <div class="header">
       <div class="navmask header">
-        <div class="container">
+        <div id="header" class="container">
           <h1 class="titulo cslogo"><a href="index.html"> - </a></h1>
           <ul class="navbar_header">
             <span id="span_agora" class="agora"></span>
